[Improve][Core] Add JDK version-specific GC logging options for JDK 8 and JDK 11+ (#2319)